# hilde-lxmenu-data

desktop-directories/: ActionGames.directory.in  AdventureGames.directory.in  ArcadeGames.directory.in  BoardGames.directory.in  CardGames.directory.in  KidsGames.directory.in  LogicGames.directory.in  Makefile.am  RolePlayingGames.directory.in  SimulationGames.directory.in  SportsGames.directory.in  StrategyGames.directory.in  X-UnsortedGames.directory.in  audio.directory.in  system-emulation.directory.in
layout/: lxde-applications.menu
po/: POTFILES.in  af.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  fur.po  fy.po  ga.po  gl.po  gn.po  gu.po  he.po  hi.po  hr.po  (+67 more)
